# duration-calc

./: Cargo.toml  README.md
src/: calculator.rs  main.rs  parser.rs
tests/: integration_tests.rs
